# summary-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/telegram_summary_bot/: main.py
src/telegram_summary_bot/bootstrap/: __init__.py  application.py
src/telegram_summary_bot/core/: __init__.py  config.py  logging.py  types.py
src/telegram_summary_bot/handlers/: __init__.py  commands.py  errors.py  messages.py
src/telegram_summary_bot/infrastructure/: lifecycle.py
src/telegram_summary_bot/infrastructure/db/: __init__.py  engine.py  models.py  repository.py
src/telegram_summary_bot/infrastructure/llm/: __init__.py  client.py  prompts.py
src/telegram_summary_bot/services/: __init__.py  jalali.py  summary.py  telegram_context.py
